fix link presentacion

--- a/Entrega1/index.html
+++ b/Entrega1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://github.com/MailenMartinez/mailenmartinez.github.io"><h1>Link a presentacion</h1></a>
+    <a href="https://www.figma.com/proto/HmFA05Hp9ipX4QhwHCB34s/TPE-Entrega-1?node-id=251-748&node-type=canvas&t=JsOOoDUXi5TbCzeR-0&scaling=min-zoom&content-scaling=fixed&page-id=1%3A4&starting-point-node-id=251%3A748"><h1>Link a presentacion</h1></a>
     <a href="https://www.figma.com/design/HmFA05Hp9ipX4QhwHCB34s/TPE-Entrega-1?node-id=0-1&node-type=canvas&t=JsOOoDUXi5TbCzeR-0"><h1>Link a modo editor</h1></a>
 </body>
 </html>
