--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -291,6 +291,125 @@
         </div>
         
     </div>
+    <div class="carousel">
+            <h2>Juegos de chicas</h2>
+            <div class="carousel-list" id="carousel-multiplayer">
+                <button class="carrusel-arrow carrusel-prev" id="button-prev-multiP" data-button="button-prev">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                        class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 320 512">
+                        <path fill="currentColor"
+                            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                        </path>
+                    </svg>
+                </button>
+                <div class="carousel-track" id="track">
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/fashionholic.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Fashion holic</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                <div class="cart-price-section">
+                                    <div class="cart-icon">
+                                        <i class="fa-solid fa-cart-plus"></i>
+                                    </div>
+                                    <div class="price-tag"><span>$9</span></div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/princesabodaprimaveral.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Princesa boda primaveral</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/cakebaker.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Cake baker</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/nailsdecorator.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Nails decorator</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                <div class="cart-price-section">
+                                    <div class="cart-icon">
+                                        <i class="fa-solid fa-cart-plus"></i>
+                                    </div>
+                                    <div class="price-tag"><span>$9</span></div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/queenclothing.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Queen clothing</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/cenicienta.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Cenicienta</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/schoolteacher.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>School teacher</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/flowerdetective.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Flower detective</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick">
+                            <div class="game-card">
+                                <img src="assets/images/sonic.png" alt="New Super Mario Bros" class="game-image">
+                                <div class="hover-overlay">
+                                <h2>Sonic the hedgehog</h2>
+                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <button class="carrusel-arrow carrusel-next" id="button-next-multiP" data-button="button-next">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                        class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 320 512">
+                        <path fill="currentColor"
+                            d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                        </path>
+                    </svg>
+            </button>
+        </div>
+        
+    </div>
     </div>
      <!--Carruseles-->
 
