centrado contenido 4 en linea

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -41,31 +41,32 @@
             </div>
         </a>
     </nav>
-    <div class="cont-texto-4enlinea">
-        <div class="cont-titulo"> 4 en linea
-        </div>
-        <div class="seguimiento-nav">
-            <ul class="seguimiento-list">
-                <li><a href="">Juegos ></a></li>
-                <li><a href="">Juegos de mesa ></a></li>
-                <li><a href="">4 en linea</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="container-juego">
-        <div class="publicidad">
-            <h4>add content</h4>
-        </div>
-        <div class="cont-4enlinea">
-            <img src="assets/images/4enlinea.jpg" alt="" class="juego-image">
-        </div>
-        <div class="publicidad">
-            <h4>add content</h4>
-        </div>
+    <div class="cont-all">
+            <div class="cont-texto-4enlinea">
+                <div class="cont-titulo"> 4 en linea
+                </div>
+                <div class="seguimiento-nav">
+                    <ul class="seguimiento-list">
+                        <li><a href="">Juegos ></a></li>
+                        <li><a href="">Juegos de mesa ></a></li>
+                        <li><a href="">4 en linea</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="container-juego">
+                <div class="publicidad">
+                    <h4>add content</h4>
+                </div>
+                <div class="cont-4enlinea">
+                    <img src="assets/images/4enlinea.jpg" alt="" class="juego-image">
+                </div>
+                <div class="publicidad">
+                    <h4>add content</h4>
+                </div>
 
-    </div>
+            </div>
   
-
+    </div>
     
 
     <script src="js/menu.js"></script>
