Agrego la estructura de los comentarios

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -65,6 +65,18 @@
                 </div>
 
             </div>
+            <div class="cont-compartir">
+                    //boton compartir
+            </div>
+            <div class="como-jugar">
+                <h4>¿Como jugar?</h4>
+            </div>
+            <div class="cont-gameplays">
+                //imgs
+            </div>
+            <div class="cont-comentarios">
+                <h4>Comentarios</h4>
+            </div>
   
     </div>
     
