info debajo del juego

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -42,41 +42,48 @@
         </a>
     </nav>
     <div class="cont-all">
-            <div class="cont-texto-4enlinea">
-                <div class="cont-titulo"> 4 en linea
-                </div>
-                <div class="seguimiento-nav">
-                    <ul class="seguimiento-list">
-                        <li><a href="">Juegos ></a></li>
-                        <li><a href="">Juegos de mesa ></a></li>
-                        <li><a href="">4 en linea</a></li>
-                    </ul>
-                </div>
+        <div class="cont-texto-4enlinea">
+            <div class="cont-titulo"> 4 en linea
             </div>
-            <div class="container-juego">
-                <div class="publicidad">
-                    <h4>add content</h4>
-                </div>
-                <div class="cont-4enlinea">
-                    <img src="assets/images/4enlinea.jpg" alt="" class="juego-image">
-                </div>
-                <div class="publicidad">
-                    <h4>add content</h4>
-                </div>
+            <div class="seguimiento-nav">
+                <ul class="seguimiento-list">
+                    <li><a href="">Juegos ></a></li>
+                    <li><a href="">Juegos de mesa ></a></li>
+                    <li><a href="">4 en linea</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container-juego">
+            <div class="publicidad">
+                <h4>add content</h4>
+            </div>
+            <div class="cont-4enlinea">
+                <img src="assets/images/4enlinea.jpg" alt="" class="juego-image">
+            </div>
+            <div class="publicidad">
+                <h4>add content</h4>
+            </div>
 
+        </div>
+        <div class="cont-compartir">
+            <button class="compartir-button"><span>COMPARTIR</span></button>
+            <div class="info-compartir">
+                <h3>Compartir</h3>
             </div>
-            <div class="cont-compartir">
-                    //boton compartir
+        </div>
+        <div class="como-jugar">
+            <div class="titulo-como-jugar">
+                <h4>¿Como jugar a 4 en linea?</h4>
+             </div>
+        </div>
+        <div class="cont-gameplays">
+            <div class="titulo-gameplays">
+                <h4>Gameplays</h4>
             </div>
-            <div class="como-jugar">
-                <h4>¿Como jugar?</h4>
-            </div>
-            <div class="cont-gameplays">
-                //imgs
-            </div>
-            <div class="cont-comentarios">
-                <h4>Comentarios</h4>
-            </div>
+        </div>
+        <div class="cont-comentarios">
+            <h4>Comentarios</h4>
+        </div>
   
     </div>
     
