--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -66,9 +66,13 @@
 
         </div>
         <div class="cont-compartir">
-            <button class="compartir-button"><span>COMPARTIR</span></button>
-            <div class="info-compartir">
+            <button class="open-compartir-btn" id="openCompartir">COMPARTIR</button>
+            <div class="info-compartir" id="info-compartir">
+                <button class="close-compartir-btn" id="closeCompartir">cerrar</button>
                 <h3>Compartir</h3>
+                <div class="cont-iconos-compartir">
+                    <h6>iconos y link de copiar</h6>
+                </div>
             </div>
         </div>
         <div class="como-jugar">
@@ -89,6 +93,7 @@
     
 
     <script src="js/menu.js"></script>
+    <script src="js/compartir.js"></script>
     <script src="https://kit.fontawesome.com/c59d1be4df.js" crossorigin="anonymous"></script>
 </body>
 </html>
