--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -43,7 +43,8 @@
     </nav>
     <div class="cont-all">
         <div class="cont-texto-4enlinea">
-            <div class="cont-titulo"> 4 en linea
+            <div class="cont-titulo">
+                <h2> 4 en linea</h2>
             </div>
             <div class="seguimiento-nav">
                 <ul class="seguimiento-list">
@@ -66,12 +67,17 @@
 
         </div>
         <div class="cont-compartir">
-            <button class="open-compartir-btn" id="openCompartir">COMPARTIR</button>
+            <button class="open-compartir-btn" id="openCompartir">Compartir</button>
             <div class="info-compartir" id="info-compartir">
                 <button class="close-compartir-btn" id="closeCompartir">cerrar</button>
                 <h3>Compartir</h3>
                 <div class="cont-iconos-compartir">
                     <h6>iconos y link de copiar</h6>
+                </div>
+                <div class="cont-link">
+                    <input type="text" value="https://gametime.com/juegos/juegosdmesa/4enlinea" readonly>
+                    <button class="copy-btn">Copiar</button>
+
                 </div>
             </div>
         </div>
