agrego mas estilos, no puedo poner el boton en el medio :/

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -43,13 +43,11 @@
     </nav>
     <div class="cont-all">
         <div class="cont-texto-4enlinea">
-            <div class="cont-titulo">
-                <h2> 4 en linea</h2>
-            </div>
+            <h2> 4 en linea</h2>
             <div class="seguimiento-nav">
                 <ul class="seguimiento-list">
-                    <li><a href="">Juegos ></a></li>
-                    <li><a href="">Juegos de mesa ></a></li>
+                    <li><a href="">Juegos <span>></span> </a></li>
+                    <li><a href="">Juegos de mesa <span>></span></a></li>
                     <li><a href="">4 en linea</a></li>
                 </ul>
             </div>
