--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -54,20 +54,20 @@
         </div>
         <div class="container-juego">
             <div class="publicidad">
-                <h4>add content</h4>
+                
             </div>
             <div class="cont-4enlinea">
                 <img src="assets/images/4enlinea.jpg" alt="" class="juego-image">
             </div>
             <div class="publicidad">
-                <h4>add content</h4>
+                
             </div>
 
         </div>
         <div class="cont-compartir">
             <button class="open-compartir-btn" id="openCompartir">Compartir</button>
             <div class="info-compartir" id="info-compartir">
-                <button class="close-compartir-btn" id="closeCompartir">cerrar</button>
+                <button class="close-compartir-btn" id="closeCompartir">X</button>
                 <h3>Compartir</h3>
                 <div class="cont-iconos-compartir">
                     <h6>iconos y link de copiar</h6>
@@ -81,16 +81,17 @@
         </div>
         <div class="como-jugar">
             <div class="titulo-como-jugar">
-                <h4>¿Como jugar a 4 en linea?</h4>
+                <h3>¿Como jugar a 4 en linea?</h3>
              </div>
+             <p>Los jugadores escogen las fichas de mario o bowser y las colocan en la rejilla, comenzando por el centro o el borde, e intentan alinear 4 en horizontal, vertical o diagonal. Utiliza la estrategia para bloquear a tu adversario mientras intentas ser el primero en colocar 4 en línea para ganar.</p>
         </div>
         <div class="cont-gameplays">
             <div class="titulo-gameplays">
-                <h4>Gameplays</h4>
+                <h3>Gameplays</h3>
             </div>
         </div>
         <div class="cont-comentarios">
-            <h4>Comentarios</h4>
+            <h3>Comentarios</h3>
         </div>
   
     </div>
