agrego una carpeta para guardar los iconos y guardo los de compartir

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -72,14 +72,34 @@
                 <button class="close-compartir-btn" id="closeCompartir">X</button>
                 <h3>Compartir</h3>
                 <div class="cont-iconos-compartir">
-                    <h6>iconos y link de copiar</h6>
+                    <div class="cont-iconosYtitulo">
+                         <img src="assets/iconos/Facebook.svg" alt="">
+                         <p>Facebook</p>
+                    </div>
+                    <div class="cont-iconosYtitulo">
+                        <img src="assets/iconos/WSP.svg" alt="">
+                        <p>wasap</p>
+                   </div>
+                   <div class="cont-iconosYtitulo">
+                        <img src="assets/iconos/twitterIcon.svg" alt="">
+                         <p>X</p>
+                    </div>
+                    <div class="cont-iconosYtitulo">
+                        <img src="assets/iconos/reddit-icon.svg" alt="">
+                        <p>Reddit</p>
+                   </div>
+                   <div class="cont-iconosYtitulo">
+                        <img src="assets/iconos/emailIcono.svg" alt="">
+                        <p>Email</p>
+                    </div>
                 </div>
+            
                 <div class="cont-link">
                     <input type="text" value="https://gametime.com/juegos/juegosdmesa/4enlinea" readonly>
                     <button class="copy-btn">Copiar</button>
 
                 </div>
-            </div>
+           </div> 
         </div>
         <div class="como-jugar">
             <div class="titulo-como-jugar">
