--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -205,7 +205,7 @@
                                 <img src="assets/images/4enlineamariovsbowser.png" alt="New Super Mario Bros" class="game-image">
                                 <div class="hover-overlay">
                                 <h2>4 en linea mario vs bowser</h2>
-                                <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+                                <a href="4enlinea.html"><button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button></a>
                                 </div>
                             </div>
                         </div>
