icono 4 en linea

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>4 en linea</title>
 </head>
 <body>
     <nav class="navbar">
@@ -43,9 +43,10 @@
     </nav>
     <div class="cont-all">
         <div class="cont-texto-4enlinea">
-            
-                <h2> 4 en linea</h2>
+                <img src="assets/images/4enlinea-icono.jpg" alt="">
+               
                 <div class="seguimiento-nav">
+                     <h2> 4 en linea</h2>
                     <ul class="seguimiento-list">
                         <li><a href="">Juegos <span>></span> </a></li>
                         <li><a href="">Juegos de mesa <span>></span></a></li>
@@ -78,7 +79,7 @@
                     </div>
                     <div class="cont-iconosYtitulo">
                         <img src="assets/iconos/WSP.svg" alt="">
-                        <p>wasap</p>
+                        <p>WhatsApp</p>
                    </div>
                    <div class="cont-iconosYtitulo">
                         <img src="assets/iconos/twitterIcon.svg" alt="">
@@ -122,10 +123,13 @@
             <h3>Comentarios</h3>
             <p>Tu calificación ayuda a que los mejores juegos aparezcan en nuestra sección de “Más Populares”. ¡Haz tu voz escuchada!</p>
             <div class="comentario">
-                <div class="titulo-comentario-">
-                <h5>Tú</h5>
+                <div class="titulo-comentario">
+                    <h5>Tú</h5>
                 </div>
-                <p>¿Qué opinas sobre este juego?</p>
+                <div class="info-cometario">
+                    <p>¿Qué opinas sobre este juego?</p>
+                    <button class="post-comentario-btn">POST</button>
+                </div>
             </div>
         </div>
   
