iconos en titulos

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -104,12 +104,15 @@
         </div>
         <div class="como-jugar">
             <div class="titulo-como-jugar">
+                <img src="assets/iconos/comoJugar.svg" alt="">
                 <h3>¿Como jugar a 4 en linea?</h3>
              </div>
              <p>Los jugadores escogen las fichas de mario o bowser y las colocan en la rejilla, comenzando por el centro o el borde, e intentan alinear 4 en horizontal, vertical o diagonal. Utiliza la estrategia para bloquear a tu adversario mientras intentas ser el primero en colocar 4 en línea para ganar.</p>
         </div>
         <div class="cont-gameplays">
-            <div class="titulo-gameplays"><h3>Gameplays</h3>
+            <div class="titulo-gameplays">
+                <img src="assets/iconos/gameplaysIcon.svg" alt="">
+                <h3>Gameplays</h3>
             </div>
             <div class="gameplays-img">
                 <img src="assets/images/gameplay1.jpg" class="gameplay-image" alt="">
