--- a/Entrega2/cards.html
+++ b/Entrega2/cards.html
@@ -1,21 +1,24 @@
-<div class="game-card">
-    <img src="assets/images/Mariocardimg.png" alt="New Super Mario Bros" class="game-image">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <div class="game-card">
+    <img src="assets/images/fashionholic.png" alt="New Super Mario Bros" class="game-image">
     <div class="hover-overlay">
-      <h2>NOMBRE DEL JUEGO</h2>
-      <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
-    </div>
-</div>
-
-<div class="game-card">
-    <img src="assets/images/Mariocardimg.png" alt="New Super Mario Bros" class="game-image">
-    <div class="hover-overlay">
-      <h2>NOMBRE DEL JUEGO</h2>
-      <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
-      <div class="cart-price-section">
+    <h2>Fashion holic</h2>
+    <button class="play-button"><i class="fa-solid fa-gamepad"></i><span>PLAY NOW</span></button>
+    <div class="cart-price-section">
         <div class="cart-icon">
             <i class="fa-solid fa-cart-plus"></i>
         </div>
-        <div class="price-tag"><span>$9</span></div>
-      </div>
+        <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""></div>
     </div>
-</div>
+    </div>
+  </div>
+</body>
+</html>
