--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -21,6 +21,11 @@
             <li><a href="#">Multiplayer</a></li>
           </ul>
         </div>
+        <a href="index.html">
+            <div class="logo">
+                <img src="assets/images/LogoGametime.png" alt="Logo">
+            </div>
+        </a>
         <div class="search-container">
           <input type="text" placeholder="¿A qué jugamos hoy?">
           <button><i class="fa-solid fa-magnifying-glass search-icon"></i></button>
@@ -32,14 +37,9 @@
                 <li><a href="">Mi perfil</a></li>
                 <li><a href="">Mis juegos</a></li>
                 <li><a href="">Logros</a></li>
-                <li><a href="">Cerrar sesion</a></li>
+                <li><a href="login.html">Cerrar sesion</a></li>
             </ul>
         </div>
-        <a href="index.html">
-            <div class="logo">
-                <img src="assets/images/LogoGametime.png" alt="Logo">
-            </div>
-        </a>
     </nav>
     <div class="cont-all">
         <div class="cont-texto-4enlinea">
