--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -38,7 +38,7 @@
                 <li><a href="">Mi perfil</a></li>
                 <li><a href="">Mis juegos</a></li>
                 <li><a href="">Logros</a></li>
-                <li><a href="">Cerrar sesion</a></li>
+                <li><a href="login.html">Cerrar sesion</a></li>
             </ul>
         </div>
     </nav>
@@ -346,12 +346,11 @@
                                 <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                                 <div class="hover-overlay">
                                 <h2>Nails decorator</h2>
+                                
                                 <button class="play-button"><span>BUY NOW</span></button>
-                                <div class="cart-price-section">
                                     <div class="cart-icon">
                                         <i class="fa-solid fa-cart-plus"></i>
                                     </div>
-                                </div>
                                 </div>
                             </div>
                         </div>
@@ -417,7 +416,88 @@
     </div>
     </div>
      <!--Carruseles-->
-
+     <footer class="footer">
+        <div class="footer-column">
+            <h2>Acerca de nosotros</h2>
+            <ul>
+                <li>Quiénes somos</li>
+                <li>Historia de la empresa</li>
+                <li>Misión y visión</li>
+                <li>Contacto</li>
+                <li>Trabaja con nosotros</li>
+            </ul>
+            <h2>Legal</h2>
+            <ul>
+                <li>Términos y condiciones</li>
+                <li>Políticas de privacidad</li>
+                <li>Políticas de cookies</li>
+                <li>Derechos de autor</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h2>Ubicación</h2>
+            <ul>
+                <li>Nuestras oficinas</li>
+                <li>Sucursales</li>
+                <li>Mapa</li>
+            </ul>
+            <h2>Soporte y comunidad</h2>
+            <ul>
+                <li>Centro de ayuda</li>
+                <li>Reembolso y devoluciones</li>
+                <li>Soporte técnico</li>
+                <li>Foros de la comunidad</li>
+                <li>Eventos y torneos</li>
+                <li>Productos y servicios</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h2>Recursos</h2>
+            <ul>
+                <li>Descargas</li>
+                <li>Tutoriales</li>
+                <li>Foros</li>
+                <li>Webinars</li>
+                <li>API & Integraciones</li>
+            </ul>
+            <h2>Enlaces rápidos</h2>
+            <ul>
+                <li>Preguntas Frecuentes (FAQ)</li>
+                <li>Términos y condiciones</li>
+                <li>Actualizaciones y parches</li>
+                <li>Descargas de juegos</li>
+                <li>Mapa del sitio</li>
+                <li>Soporte</li>
+                <li>Ayuda en línea</li>
+                <li>Manuales y guías</li>
+                <li>Políticas de devolución</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h2>Comunidad</h2>
+            <ul>
+                <li>Blog</li>
+                <li>Noticias</li>
+                <li>Eventos</li>
+                <li>Testimonios</li>
+                <li>Casos de éxito</li>
+                <li>Conéctate con nosotros</li>
+                <li>Suscripción al boletín informativo</li>
+                <li>2494-545454</li>
+            </ul>
+            <h2>Servicios</h2>
+            <ul>
+                <li>Catálogo</li>
+                <li>Precios</li>
+                <li>Promociones</li>
+                <li>Clientes</li>
+                <li>Opiniones de clientes</li>
+                <li>Empresas asociadas</li>
+                <li>Programas de fidelidad</li>
+                <li>Descuentos para clientes</li>
+            </ul>
+        </div>
+    </footer>
     <script src="js/carruseles.js"></script>
     <script src="js/menu.js"></script>
     <script src="https://kit.fontawesome.com/c59d1be4df.js" crossorigin="anonymous"></script>
