Home finalizado, 4en linea casi terminado

--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -47,6 +47,7 @@
 
 
      <!--Carruseles-->
+
     <div class="carruseles">
             <div class="carousel">
                 <h2>Multiplayer</h2>
@@ -248,8 +249,8 @@
                                 <button class="play-button"><span>BUY NOW</span></button>
                                     <div class="cart-price-section">
                                         <div class="cart-icon">
-                                            <i class="fa-solid fa-cart-plus"></i>
-                                            <i class="fa-solid fa-circle-check hidden"></i>
+                                            <i class="fa-solid fa-cart-plus addCart"></i>
+                                            <i class="fa-solid fa-circle-check hidden addedCart"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -459,10 +460,10 @@
             <div class="carousel-track" id="track">
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/fashionholic.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/archery.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
-                            <h2>Fashion holic</h2>
+                            <h2>Archery Master</h2>
                             <button class="play-button"><span>BUY NOW</span></button>
                             <div class="cart-price-section">
                                 <div class="cart-icon">
@@ -475,29 +476,29 @@
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/princesabodaprimaveral.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/basketbros.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
-                            <h2>Princesa boda primaveral</h2>
+                            <h2>Basket bros</h2>
                             <button class="play-button"><span>PLAY NOW</span></button>
                             </div>
                         </div>
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/cakebaker.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/fc24.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="hover-overlay">
-                            <h2>Cake baker</h2>
+                            <h2>FC2024</h2>
                             <button class="play-button"><span>PLAY NOW</span></button>
                             </div>
                         </div>
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/nailsdecorator.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/jump.png" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
-                            <h2>Nails decorator</h2>
+                            <h2>Base jump</h2>
                             
                             <button class="play-button"><span>BUY NOW</span></button>
                                 <div class="cart-icon">
@@ -509,19 +510,19 @@
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/queenclothing.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/boxingstars.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="hover-overlay">
-                            <h2>Queen clothing</h2>
+                            <h2>Boxing stars</h2>
                             <button class="play-button"><span>PLAY NOW</span></button>
                             </div>
                         </div>
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/cenicienta.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/3dbowling.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
-                            <h2>Cenicienta</h2>
+                            <h2>3d Bowling</h2>
                             <button class="play-button"><span>BUY NOW</span></button>
                             <div class="cart-icon">
                                 <i class="fa-solid fa-cart-plus addCart"></i>
@@ -532,19 +533,19 @@
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/schoolteacher.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/penaltyshooters.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="hover-overlay">
-                            <h2>School teacher</h2>
+                            <h2>Penalty shooters</h2>
                             <button class="play-button"><span>PLAY NOW</span></button>
                             </div>
                         </div>
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/flowerdetective.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/fish.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
-                            <h2>Flower detective</h2>
+                            <h2>Real Fishing</h2>
                             <button class="play-button"><span>BUY NOW</span></button>
                             <div class="cart-icon">
                                 <i class="fa-solid fa-cart-plus addCart"></i>
@@ -555,9 +556,9 @@
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/sonic.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/cricket.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="hover-overlay">
-                            <h2>Sonic the hedgehog</h2>
+                            <h2>Cricket Superstars</h2>
                             <button class="play-button"><span>PLAY NOW</span></button>
                             </div>
                         </div>
@@ -576,86 +577,7 @@
     
     </div>
 </div>
-     <!--Carruseles-->
 
-    <!--
-     <footer class="footer">
-        <div class="footer-column">
-            <h2>Acerca de nosotros</h2>
-            <ul>
-                <li>Quiénes somos</li>
-                <li>Historia de la empresa</li>
-                <li>Misión y visión</li>
-                <li>Contacto</li>
-                <li>Trabaja con nosotros</li>
-            </ul>
-            <h2>Legal</h2>
-            <ul>
-                <li>Términos y condiciones</li>
-                <li>Políticas de privacidad</li>
-                <li>Políticas de cookies</li>
-                <li>Derechos de autor</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h2>Ubicación</h2>
-            <ul>
-                <li>Nuestras oficinas</li>
-                <li>Sucursales</li>
-                <li>Mapa</li>
-            </ul>
-            <h2>Soporte</h2>
-            <ul>
-                <li>Centro de ayuda</li>
-                <li>Reembolso y devoluciones</li>
-                <li>Soporte técnico</li>
-                <li>Productos y servicios</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h2>Recursos</h2>
-            <ul>
-                <li>Descargas</li>
-                <li>Tutoriales</li>
-                <li>Foros</li>
-                <li>Webinars</li>
-                <li>API & Integraciones</li>
-            </ul>
-            <h2>Enlaces rápidos</h2>
-            <ul>
-                <li>Preguntas Frecuentes (FAQ)</li>
-                <li>Términos y condiciones</li>
-                <li>Actualizaciones y parches</li>
-                <li>Descargas de juegos</li>
-                <li>Mapa del sitio</li>
-                <li>Soporte</li>
-                <li>Ayuda en línea</li>
-                <li>Manuales y guías</li>
-                <li>Políticas de devolución</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h2>Comunidad</h2>
-            <ul>
-                <li>Blog</li>
-                <li>Noticias</li>
-                <li>Eventos</li>
-                <li>Foros de la comunidad</li>
-                <li>Eventos y torneos</li>
-            </ul>
-            <h2>Servicios</h2>
-            <ul>
-                <li>Catálogo</li>
-                <li>Precios</li>
-                <li>Promociones</li>
-                <li>Clientes</li>
-                <li>Opiniones de clientes</li>
-                <li>Empresas asociadas</li>
-                <li>Programas de fidelidad</li>
-                <li>Descuentos para clientes</li>
-            </ul>
-        </div>
-    </footer>-->
 
     <footer>
         <div class="container-footer">
