--- a/Entrega3/4enlineajuego.html
+++ b/Entrega3/4enlineajuego.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/4enlinea.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,3 +19,5 @@
     <script src="js/4enlinea.js"></script>
 </body>
 </html>
+
+
