--- a/Entrega3/index.html
+++ b/Entrega3/index.html
@@ -495,7 +495,7 @@
                     </div>
                     <div class="slick">
                         <div class="game-card">
-                            <img src="assets/images/jump.png" alt="New Super Mario Bros" class="game-image">
+                            <img src="assets/images/jump.PNG" alt="New Super Mario Bros" class="game-image">
                             <div class="price-tag"><img src="assets/iconos/Cardtag.svg" alt=""><span>$12</span></div>
                             <div class="hover-overlay">
                             <h2>Base jump</h2>
